--- a/de/briliniStudio.html
+++ b/de/briliniStudio.html
@@ -13,7 +13,7 @@
     <title>SD Rroduction</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div>
         <a href="../de/home.html">
           <img class="logo" src="../img/logo.svg" alt="SD" />
@@ -62,7 +62,7 @@
       </div>
     </header>
     <main>
-      <section id="organicShop">
+      <section id="organicShop" class="organicShopAnimation">
         <h4>Online Geschäft</h4>
         <h3>Bio <span class="borderText">Laden</span></h3>
       </section>
@@ -72,7 +72,7 @@
         alt=""
       />
 
-      <section id="aboutProject">
+      <section id="aboutProject" class="aboutProject">
         <div>
           <h3>Über <span class="borderText">Projekt</span></h3>
           <p>
@@ -88,7 +88,7 @@
         </div>
       </section>
 
-      <section id="goalsAndObjectives">
+      <section id="goalsAndObjectives" class="goalsAndObjectives">
         <h3>Ziele und <span class="borderText">Zielsetzungen</span></h3>
         <ul>
           <li>
@@ -122,7 +122,7 @@
       />
 
       <section id="mainPage">
-        <h3>Haupt <span class="borderText">Seite</span></h3>
+        <h3 class="mainPageAnimation">Haupt <span class="borderText">Seite</span></h3>
         <div>
           <img src="../img/briliniStudio/Group25.png" alt="" />
           <img src="../img/briliniStudio/landing.png" alt="" />
@@ -342,5 +342,6 @@
 
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
+    <script src="../js/organic/organic.js"></script>
   </body>
 </html>
