--- a/de/organicShop.html
+++ b/de/organicShop.html
@@ -63,6 +63,7 @@
       </div>
     </header> 
     <main>
+
       <section id="organicShop"  class="organicShopAnimation">
         <h4>Online Geschäft</h4>
         <h3>Bio <span class="borderText">Laden</span></h3>
@@ -116,10 +117,11 @@
           </li>
         </ul>
       </section>
+      
       <img class="organicShopImage" src="../img/organicShop/Photo.png" alt="" />
 
       <section id="mainPage">
-        <h3>Haupt <span class="borderText">Seite</span></h3>
+        <h3 class="mainPageAnimation">Haupt <span class="borderText">Seite</span></h3>
         <div>
           <img src="../img/organicShop/page1.png" alt="" />
           <img src="../img/organicShop/page2.png" alt="" />
@@ -132,14 +134,14 @@
 
       <section id="internalPages">
         <div>
-          <h3>Interne <span class="borderText">Seiten</span></h3>
-          <img src="../img/organicShop/page3.png" alt="" />
-          <img src="../img/organicShop/page4.png" alt="" />
+          <h3 class="InternalPageAnimationDe">Interne <span class="borderText">Seiten</span></h3>
+          <img src="../img/organicShop/page3.png" alt=""  class="InternalPagePictureOneAnimationDE"/>
+          <img src="../img/organicShop/page4.png" alt=""  class="InternalPagePictureTwoAnimationDE"/>
         </div>
         <div>
-          <img src="../img/organicShop/page5.png" alt="" />
-          <img src="../img/organicShop/page6.png" alt="" />
-          <img src="../img/organicShop/page404.png" alt="" />
+          <img src="../img/organicShop/page5.png" alt=""  class="InternalPagePictureThreeAnimationDE"/>
+          <img src="../img/organicShop/page6.png" alt=""  class="InternalPagePictureFourAnimationDE"/>
+          <img src="../img/organicShop/page404.png" alt=""  class="InternalPagePictureFiveAnimationDE"/>
         </div>
       </section>
 
@@ -348,6 +350,7 @@
     </footer>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
-    <script src="../js/organic.js"></script>
+    <script src="../js//organic/organic.js"></script>
+    <script src="../js//organic/organicDE.js"></script>
   </body>
 </html>
