--- a/de/whiteCollar.html
+++ b/de/whiteCollar.html
@@ -123,7 +123,7 @@
       />
 
       <section id="mainPage">
-        <h3>Haupt <span class="borderText">Seite</span></h3>
+        <h3 class="mainPageAnimation" > Haupt <span class="borderText">Seite</span></h3>
         <div>
           <img src="../img/whiteCollar/Banner.png" alt="" />
           <img src="../img/whiteCollar/screnshot.png" alt="" />
@@ -136,14 +136,14 @@
       
       <section id="internalPages">
         <div>
-          <h3>Interne <span class="borderText">Seiten</span></h3>
-          <img src="../img/whiteCollar/Team1.png" alt="" />
-          <img src="../img/whiteCollar/BlogSingle.png" alt="" />
+          <h3 class="InternalPageAnimation">Interne <span class="borderText">Seiten</span></h3>
+          <img src="../img/whiteCollar/Team1.png" alt=""  class="InternalPagePictureOneAnimation"/>
+          <img src="../img/whiteCollar/BlogSingle.png" alt="" class="InternalPagePictureTwoAnimation"/>
         </div>
         <div>
-          <img src="../img/whiteCollar/AboutUs.png" alt="" />
-          <img src="../img/whiteCollar/404.png" alt="" />
-          <img src="../img/whiteCollar/PricePacks.png" alt="" />
+          <img src="../img/whiteCollar/AboutUs.png" alt="" class="InternalPagePictureThreeAnimation"/>
+          <img src="../img/whiteCollar/404.png" alt="" class="InternalPagePictureFourAnimation"/>
+          <img src="../img/whiteCollar/PricePacks.png" alt="" class="InternalPagePictureFiveAnimation"/>
         </div>
       </section>
 
@@ -352,6 +352,6 @@
     
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
-    <script src="../js/organic.js"></script>
+    <script src="../js/organic/organic.js"></script>
   </body>
 </html>
