--- a/en/pagesShop.html
+++ b/en/pagesShop.html
@@ -12,7 +12,7 @@
     <title>SD Rroduction</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div>
         <a href="../en/home.html">
           <img class="logo" src="../img/logo.svg" alt="SD" />
@@ -62,13 +62,13 @@
       </div>
     </header>
     <main>
-      <section id="organicShop">
+      <section id="organicShop" class="organicShopAnimation">
         <h4>Online Shop</h4>
         <h3>Pages <span class="borderText">shop</span></h3>
       </section>
       <img class="organicShopImage" src="../img/pagesShop/home1.png" alt="" />
 
-      <section id="aboutProject">
+      <section id="aboutProject" class="aboutProject">
         <div>
           <h3>About <span class="borderText">Project</span></h3>
           <p>
@@ -83,7 +83,7 @@
         </div>
       </section>
 
-      <section id="goalsAndObjectives">
+      <section id="goalsAndObjectives" class="goalsAndObjectives">
         <h3>Goals and <span class="borderText">Objectives</span></h3>
         <ul>
           <li>
@@ -107,7 +107,7 @@
       <img class="organicShopImage" src="../img/pagesShop/home2.png" alt="" />
 
       <section id="mainPage">
-        <h3>Main <span class="borderText">Page</span></h3>
+        <h3 class="mainPageAnimation">Main <span class="borderText">Page</span></h3>
         <div>
           <img src="../img/pagesShop/image1.png" alt="" />
           <img src="../img/pagesShop/image2.png" alt="" />
@@ -120,14 +120,14 @@
       
       <section id="internalPages">
         <div>
-          <h3>Internal <span class="borderText">Pages</span></h3>
-          <img src="../img/pagesShop/page1.png" alt="" />
-          <img src="../img/pagesShop/page2.png" alt="" />
-          <img src="../img/pagesShop/page3.png" alt="" />
+          <h3 class="InternalPageAnimation">Internal <span class="borderText">Pages</span></h3>
+          <img src="../img/pagesShop/page1.png" alt="" class="InternalPagePictureOneAnimation"/>
+          <img src="../img/pagesShop/page2.png" alt="" class="InternalPagePictureTwoAnimation"/>
+          <img src="../img/pagesShop/page3.png" alt="" class="InternalPagePictureThreeAnimation"/>
         </div>
         <div>
-          <img src="../img/pagesShop/page4.png" alt="" />
-          <img src="../img/pagesShop/page5.png" alt="" />
+          <img src="../img/pagesShop/page4.png" alt="" class="InternalPagePictureFourAnimation"/>
+          <img src="../img/pagesShop/page5.png" alt="" class="InternalPagePictureFiveAnimation"/>
         </div>
       </section>
 
@@ -334,5 +334,6 @@
     </footer>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
+    <script src="../js/organic/organic.js"></script>
   </body>
 </html>
