--- a/en/abi.html
+++ b/en/abi.html
@@ -12,7 +12,7 @@
     <title>SD Rroduction</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div>
         <a href="../en/home.html">
           <img class="logo" src="../img/logo.svg" alt="SD" />
@@ -61,13 +61,13 @@
       </div>
     </header>
     <main>
-      <section id="organicShop">
+      <section id="organicShop" class="organicShopAnimation">
         <h4>Mobile App</h4>
         <h3>Abi</h3>
       </section>
       <img class="organicShopImage" src="../img/abi/Background-1.png" alt="" />
 
-      <section id="aboutProject">
+      <section id="aboutProject" class="aboutProject">
         <div>
           <h3>About <span class="borderText">Project</span></h3>
           <p>
@@ -83,7 +83,7 @@
         </div>
       </section>
 
-      <section id="goalsAndObjectives">
+      <section id="goalsAndObjectives"  class="goalsAndObjectives">
         <h3>Goals and <span class="borderText">Objectives</span></h3>
         <ul>
           <li>
@@ -104,18 +104,18 @@
           </li>
         </ul>
       </section>
-      <img class="organicShopImage" src="../img/abi/Background-2.png" alt="" />
+      <img class="organicShopImage mainPageAnimation" src="../img/abi/Background-2.png" alt="" />
 
       <section id="internalPages">
         <div>
-          <h3>App <span class="borderText">Pages</span></h3>
-          <img src="../img/abi/image-1.png" alt="" />
-          <img src="../img/abi/image-2.png" alt="" />
+          <h3 class=" InternalPageAnimation">App <span class="borderText">Pages</span></h3>
+          <img src="../img/abi/image-1.png" alt="" class="InternalPagePictureOneAnimation"/>
+          <img src="../img/abi/image-2.png" alt="" class="InternalPagePictureTwoAnimation"/>
         </div>
         <div>
-          <img src="../img/abi/image-3.png" alt="" />
-          <img src="../img/abi/image-4.png" alt="" />
-          <img src="../img/abi/image-5.png" alt="" />
+          <img src="../img/abi/image-3.png" alt="" class="InternalPagePictureThreeAnimation"/>
+          <img src="../img/abi/image-4.png" alt="" class="InternalPagePictureFourAnimation"/>
+          <img src="../img/abi/image-5.png" alt="" class="InternalPagePictureFiveAnimation"/>
         </div>
       </section>
 
@@ -327,5 +327,6 @@
     </footer>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
+    <script src="../js/organic/organic.js"></script>
   </body>
 </html>
