--- a/en/briliniStudio.html
+++ b/en/briliniStudio.html
@@ -12,7 +12,7 @@
     <title>SD Rroduction</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div>
         <a href="../en/home.html">
           <img class="logo" src="../img/logo.svg" alt="SD" />
@@ -62,7 +62,7 @@
       </div>
     </header>
     <main>
-      <section id="organicShop">
+      <section id="organicShop" class="organicShopAnimation">
         <h4>Landing page</h4>
         <h3>Brilini <span class="borderText">Studio</span></h3>
       </section>
@@ -72,7 +72,7 @@
         alt=""
       />
 
-      <section id="aboutProject">
+      <section id="aboutProject" class="aboutProject">
         <div>
           <h3>About <span class="borderText">Project</span></h3>
           <p>
@@ -89,7 +89,7 @@
         </div>
       </section>
 
-      <section id="goalsAndObjectives">
+      <section id="goalsAndObjectives" class="goalsAndObjectives">
         <h3>Goals and <span class="borderText">Objectives</span></h3>
         <ul>
           <li>
@@ -120,7 +120,7 @@
       />
 
       <section id="mainPage">
-        <h3>Main <span class="borderText">Page</span></h3>
+        <h3 class="mainPageAnimation" >Main <span class="borderText">Page</span></h3>
         <div>
           <img src="../img/briliniStudio/Group25.png" alt="" />
           <img src="../img/briliniStudio/landing.png" alt="" />
@@ -335,5 +335,6 @@
     </footer>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
+    <script src="../js/organic/organic.js"></script>
   </body>
 </html>
