--- a/en/organicShop.html
+++ b/en/organicShop.html
@@ -67,6 +67,7 @@
         <h4>Online Shop</h4>
         <h3>Organic <span class="borderText">shop</span></h3>
       </section>
+      
       <img
         class="organicShopImage"
         src="../img/organicShop/Background.png"
@@ -127,14 +128,14 @@
 
       <section id="internalPages">
         <div>
-          <h3>Internal <span class="borderText">Pages</span></h3>
-          <img src="../img/organicShop/page3.png" alt="" />
-          <img src="../img/organicShop/page4.png" alt="" />
+          <h3 class="InternalPageAnimation">Internal <span class="borderText">Pages</span></h3>
+          <img src="../img/organicShop/page3.png" alt="" class="InternalPagePictureOneAnimation"/>
+          <img src="../img/organicShop/page4.png" alt="" class="InternalPagePictureTwoAnimation"/>
         </div>
         <div>
-          <img src="../img/organicShop/page5.png" alt="" />
-          <img src="../img/organicShop/page6.png" alt="" />
-          <img src="../img/organicShop/page404.png" alt="" />
+          <img src="../img/organicShop/page5.png" alt="" class="InternalPagePictureThreeAnimation"/>
+          <img src="../img/organicShop/page6.png" alt="" class="InternalPagePictureFourAnimation"/>
+          <img src="../img/organicShop/page404.png" alt="" class="InternalPagePictureFiveAnimation"/>
         </div>
       </section>
       <section id="nav">
@@ -340,6 +341,6 @@
     </footer>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
-    <script src="../js/organic.js"></script>
+    <script src="../js/organic/organic.js"></script>
   </body>
 </html>
