--- a/en/whiteCollar.html
+++ b/en/whiteCollar.html
@@ -72,6 +72,7 @@
       </section>
       <img class="organicShopImage" src="../img/whiteCollar/Image.png" alt="" />
 
+
       <section id="aboutProject" class="aboutProject">
         <div>
           <h3>About <span class="borderText">Project</span></h3>
@@ -122,7 +123,7 @@
       />
 
       <section id="mainPage">
-        <h3>Main <span class="borderText">Page</span></h3>
+        <h3 class="mainPageAnimation">Main <span class="borderText">Page</span></h3>
         <div>
           <img src="../img/whiteCollar/Banner.png" alt="" />
           <img src="../img/whiteCollar/screnshot.png" alt="" />
@@ -135,14 +136,14 @@
 
       <section id="internalPages">
         <div>
-          <h3>Internal <span class="borderText">Pages</span></h3>
-          <img src="../img/whiteCollar/Team1.png" alt="" />
-          <img src="../img/whiteCollar/BlogSingle.png" alt="" />
+          <h3 class="InternalPageAnimation" >Internal <span class="borderText">Pages</span></h3>
+          <img src="../img/whiteCollar/Team1.png" alt="" class="InternalPagePictureOneAnimation"/>
+          <img src="../img/whiteCollar/BlogSingle.png" alt="" class="InternalPagePictureTwoAnimation"/>
         </div>
         <div>
-          <img src="../img/whiteCollar/AboutUs.png" alt="" />
-          <img src="../img/whiteCollar/404.png" alt="" />
-          <img src="../img/whiteCollar/PricePacks.png" alt="" />
+          <img src="../img/whiteCollar/AboutUs.png" alt="" class="InternalPagePictureThreeAnimation"/>
+          <img src="../img/whiteCollar/404.png" alt="" class="InternalPagePictureFourAnimation"/>
+          <img src="../img/whiteCollar/PricePacks.png" alt="" class="InternalPagePictureFiveAnimation"/>
         </div>
       </section>
 
@@ -350,6 +351,6 @@
     </footer>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
-    <script src="../js/organic.js"></script>
+    <script src="../js/organic/organic.js"></script>
   </body>
 </html>
