add smooth scrol

--- a/de/home.html
+++ b/de/home.html
@@ -1267,5 +1267,6 @@
     <script src="../js/cdn.jsdelivr.net_npm_swiper@10_swiper-bundle.min.js"></script>
     <script src="../js/swiper-slider.js"></script>
     <script src="../js/app.js"></script>
+      <script src="../js/SmoothScroll.js"></script>
   </body>
 </html>
