--- a/de/briliniStudio.html
+++ b/de/briliniStudio.html
@@ -343,5 +343,6 @@
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
     <script src="../js/organic/organic.js"></script>
+    <script src="../js/SmoothScroll.js"></script>
   </body>
 </html>
