--- a/de/email.html
+++ b/de/email.html
@@ -77,5 +77,6 @@
     <script src="../js/formData.js"></script>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
+    <script src="../js/SmoothScroll.js"></script>
   </body>
 </html>
