--- a/de/organicShop.html
+++ b/de/organicShop.html
@@ -352,5 +352,6 @@
     <script src="../js/language.js"></script>
     <script src="../js//organic/organic.js"></script>
     <script src="../js//organic/organicDE.js"></script>
+      <script src="../js/SmoothScroll.js"></script>
   </body>
 </html>
