--- a/de/whiteCollar.html
+++ b/de/whiteCollar.html
@@ -352,6 +352,7 @@
     
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
+      <script src="../js/SmoothScroll.js"></script>
     <script src="../js/organic/organic.js"></script>
   </body>
 </html>
