--- a/en/email.html
+++ b/en/email.html
@@ -75,5 +75,6 @@
     <script src="../js/formData.js"></script>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
+    <script src="../js/SmoothScroll.js"></script>
   </body>
 </html>
