--- a/en/home.html
+++ b/en/home.html
@@ -1213,6 +1213,7 @@
     <script src="../js/cdn.jsdelivr.net_npm_swiper@10_swiper-bundle.min.js"></script>
     <script src="../js/swiper-slider.js"></script>
     <script src="../js/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
     <script src="../js/SmoothScroll.js"></script>
   </body>
 </html>
