--- a/en/home.html
+++ b/en/home.html
@@ -444,7 +444,7 @@
             </h2>
             <img class="crlectImg" src="../img/select.svg" alt="" />
             <p>Your goals are our execution</p>
-          </div>
+          </div>Z
           <a class="buttonHeader" href="./email.html">Lets go!</a>
         </div>                            
       </section>
@@ -455,7 +455,7 @@
           Check our some of <span class="borderText">our projects</span>
         </h2>
         <div class="projectsCards">
-          <div class="projectsFragment1">
+          <div class="projectsFragment1 tablet1">
             <div class="projectsFragmentInfo1">
               <h4>Online Shop</h4>
               <h3>Organic</h3>
@@ -465,7 +465,7 @@
             <div class="projectImage1"></div>
             <div class="onlineShop"></div>
           </div>
-          <div class="projectsFragment2">
+          <div class="projectsFragment2 tablet2">
             <div class="projectImageX">
               <div class="projectImage2-1"></div>
               <div class="projectImage2-2"></div>
@@ -480,7 +480,7 @@
               <a class="buttonProject2" href="./whiteCollar.html">View</a>
             </div>
           </div>
-          <div class="projectsFragment3">
+          <div class="projectsFragment3 tablet3">
             <div class="projectsFragmentInfo3">
               <h4>Landing page</h4>
               <h3>Brilini Studio</h3>
@@ -495,7 +495,7 @@
               <div class="projectImage3-1"></div>
             </div>
           </div>
-          <div class="projectsFragment4">
+          <div class="projectsFragment4 tablet4">
             <div class="projectImage4X">
               <div class="projectImage4"></div>
               <div class="projectImage4-1"></div>
@@ -513,7 +513,7 @@
         </div>
       </section>
 
-      <section id="services">
+      <section id="services" class="serviceAnim">
         <h2>Our <span class="borderText">Services</span></h2>
         <div class="servicesCards">
 
@@ -1213,7 +1213,8 @@
     <script src="../js/cdn.jsdelivr.net_npm_swiper@10_swiper-bundle.min.js"></script>
     <script src="../js/swiper-slider.js"></script>
     <script src="../js/app.js"></script>
-    <script src="../js/SmoothScroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
+    <script src="../js/SmoothScroll.js"></script>
+    <script src="../js/table/table.js"></script>
   </body>
 </html>
