--- a/en/organicShop.html
+++ b/en/organicShop.html
@@ -69,7 +69,7 @@
       </section>
       
       <img
-        class="organicShopImage"
+        class="organicShopImage PictureOneAnimation"
         src="../img/organicShop/Background.png"
         alt=""
       />
@@ -112,7 +112,7 @@
         </ul>
       </section>
       
-      <img class="organicShopImage" src="../img/organicShop/Photo.png" alt="" />
+      <img class="organicShopImage PictureTwoAnimation" src="../img/organicShop/Photo.png" alt="" />
 
       <section id="mainPage">
         <h3 class="mainPageAnimation">Main <span class="borderText">Page</span></h3>
@@ -122,7 +122,7 @@
         </div>
       </section>
 
-      <video width="100%" autoplay muted loop>
+      <video width="100%" autoplay muted loop class="PictureThreeAnimation">
         <source src="../img/SD/video/organic_shop.mp4" type="video/mp4" />
       </video>
 
@@ -140,7 +140,7 @@
       </section>
       <section id="nav">
         <div>
-          <a class="previous" href="./pagesShop.html">
+          <a class="previous" href="./pagesShop.html"> 
             <img src="../img/left1.svg" alt="" />
             Previous</a
           >
@@ -342,8 +342,8 @@
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
     <script src="../js/organic/organic.js"></script>
+    <script src="../js/imageAnimation/image.js"></script>
     <script src="../js/SmoothScroll.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
   </body>
 </html>
