--- a/en/abi.html
+++ b/en/abi.html
@@ -65,7 +65,7 @@
         <h4>Mobile App</h4>
         <h3>Abi</h3>
       </section>
-      <img class="organicShopImage" src="../img/abi/Background-1.png" alt="" />
+      <img class="organicShopImage PictureOneAnimation" src="../img/abi/Background-1.png" alt="" />
 
       <section id="aboutProject" class="aboutProject">
         <div>
@@ -83,7 +83,7 @@
         </div>
       </section>
 
-      <section id="goalsAndObjectives"  class="goalsAndObjectives">
+      <section id="goalsAndObjectives" class="goalsAndObjectives mainPageAnimation">
         <h3>Goals and <span class="borderText">Objectives</span></h3>
         <ul>
           <li>
@@ -104,18 +104,44 @@
           </li>
         </ul>
       </section>
-      <img class="organicShopImage mainPageAnimation" src="../img/abi/Background-2.png" alt="" />
+      <img
+        class="organicShopImage PictureTwoAnimation"
+        src="../img/abi/Background-2.png"
+        alt=""
+      />
 
       <section id="internalPages">
         <div>
-          <h3 class=" InternalPageAnimation">App <span class="borderText">Pages</span></h3>
-          <img src="../img/abi/image-1.png" alt="" class="InternalPagePictureOneAnimation"/>
-          <img src="../img/abi/image-2.png" alt="" class="InternalPagePictureTwoAnimation"/>
+          <h3 class="InternalPageAnimation mainPageAnimation">
+            App <span class="borderText">Pages</span>
+          </h3>
+          <img
+            src="../img/abi/image-1.png"
+            alt=""
+            class="InternalPagePictureOneAnimation"
+          />
+          <img
+            src="../img/abi/image-2.png"
+            alt=""
+            class="InternalPagePictureTwoAnimation"
+          />
         </div>
         <div>
-          <img src="../img/abi/image-3.png" alt="" class="InternalPagePictureThreeAnimation"/>
-          <img src="../img/abi/image-4.png" alt="" class="InternalPagePictureFourAnimation"/>
-          <img src="../img/abi/image-5.png" alt="" class="InternalPagePictureFiveAnimation"/>
+          <img
+            src="../img/abi/image-3.png"
+            alt=""
+            class="InternalPagePictureThreeAnimation"
+          />
+          <img
+            src="../img/abi/image-4.png"
+            alt=""
+            class="InternalPagePictureFourAnimation"
+          />
+          <img
+            src="../img/abi/image-5.png"
+            alt=""
+            class="InternalPagePictureFiveAnimation"
+          />
         </div>
       </section>
 
@@ -327,8 +353,14 @@
     </footer>
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
-    <script src="../js/organic/organic.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script> -->
-    <script src="../js/SmoothScroll.js"></script> 
+    <script src="../js/organic/abi.js"></script>
+    <script src="../js/imageAnimation/image.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"
+      integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco="
+      crossorigin="anonymous"
+    ></script>
+    -->
+    <script src="../js/SmoothScroll.js"></script>
   </body>
 </html>
