--- a/en/briliniStudio.html
+++ b/en/briliniStudio.html
@@ -67,7 +67,7 @@
         <h3>Brilini <span class="borderText">Studio</span></h3>
       </section>
       <img
-        class="organicShopImage"
+        class="organicShopImage PictureOneAnimation"
         src="../img/briliniStudio/pexels-eberhard.png"
         alt=""
       />
@@ -114,15 +114,17 @@
         </ul>
       </section>
       <img
-        class="organicShopImage"
+        class="organicShopImage PictureTwoAnimation"
         src="../img/briliniStudio/pexels.png"
         alt=""
       />
 
       <section id="mainPage">
-        <h3 class="mainPageAnimation" >Main <span class="borderText">Page</span></h3>
+        <h3 class="mainPageAnimation">
+          Main <span class="borderText">Page</span>
+        </h3>
         <div>
-          <img src="../img/briliniStudio/Group25.png" alt="" />
+          <img class="imgAnimation" src="../img/briliniStudio/Group25.png" alt="" />
           <img src="../img/briliniStudio/landing.png" alt="" />
         </div>
       </section>
@@ -336,8 +338,13 @@
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
     <script src="../js/organic/organic.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
-    <script src="../js/SmoothScroll.js"></script>
+    <script src="../js/imageAnimation/image.js"></script>
 
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"
+      integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco="
+      crossorigin="anonymous"
+    ></script>
+    <script src="../js/SmoothScroll.js"></script>
   </body>
 </html>
