--- a/en/organicShop.html
+++ b/en/organicShop.html
@@ -12,7 +12,6 @@
     <title>SD Rroduction</title>
   </head>
   <body>
-
     <header class="header">
       <div>
         <a href="../en/home.html">
@@ -62,12 +61,11 @@
       </div>
     </header>
     <main>
-
       <section id="organicShop" class="organicShopAnimation">
         <h4>Online Shop</h4>
         <h3>Organic <span class="borderText">shop</span></h3>
       </section>
-      
+
       <img
         class="organicShopImage PictureOneAnimation"
         src="../img/organicShop/Background.png"
@@ -111,36 +109,64 @@
           </li>
         </ul>
       </section>
-      
-      <img class="organicShopImage PictureTwoAnimation" src="../img/organicShop/Photo.png" alt="" />
+
+      <img
+        class="organicShopImage PictureTwoAnimation"
+        src="../img/organicShop/Photo.png"
+        alt=""
+      />
 
       <section id="mainPage">
-        <h3 class="mainPageAnimation">Main <span class="borderText">Page</span></h3>
+        <h3 class="mainPageAnimation">
+          Main <span class="borderText">Page</span>
+        </h3>
         <div>
           <img class="imgAnimation" src="../img/organicShop/page1.png" alt="" />
           <img src="../img/organicShop/page2.png" alt="" />
         </div>
       </section>
 
-      <video width="100%" autoplay muted loop class="PictureThreeAnimation">
+      <video width="100%" autoplay muted loop>
         <source src="../img/SD/video/organic_shop.mp4" type="video/mp4" />
       </video>
 
       <section id="internalPages">
         <div>
-          <h3 class="InternalPageAnimation">Internal <span class="borderText">Pages</span></h3>
-          <img src="../img/organicShop/page3.png" alt="" class="InternalPagePictureOneAnimation"/>
-          <img src="../img/organicShop/page4.png" alt="" class="InternalPagePictureTwoAnimation"/>
+          <h3 class="InternalPageAnimation">
+            Internal <span class="borderText">Pages</span>
+          </h3>
+          <img
+            src="../img/organicShop/page3.png"
+            alt=""
+            class="InternalPagePictureOneAnimation"
+          />
+          <img
+            src="../img/organicShop/page4.png"
+            alt=""
+            class="InternalPagePictureTwoAnimation"
+          />
         </div>
         <div>
-          <img src="../img/organicShop/page5.png" alt="" class="InternalPagePictureThreeAnimation"/>
-          <img src="../img/organicShop/page6.png" alt="" class="InternalPagePictureFourAnimation"/>
-          <img src="../img/organicShop/page404.png" alt="" class="InternalPagePictureFiveAnimation"/>
+          <img
+            src="../img/organicShop/page5.png"
+            alt=""
+            class="InternalPagePictureThreeAnimation"
+          />
+          <img
+            src="../img/organicShop/page6.png"
+            alt=""
+            class="InternalPagePictureFourAnimation"
+          />
+          <img
+            src="../img/organicShop/page404.png"
+            alt=""
+            class="InternalPagePictureFiveAnimation"
+          />
         </div>
       </section>
       <section id="nav">
         <div>
-          <a class="previous" href="./pagesShop.html"> 
+          <a class="previous" href="./pagesShop.html">
             <img src="../img/left1.svg" alt="" />
             Previous</a
           >
@@ -342,8 +368,12 @@
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
     <script src="../js/organic/organic.js"></script>
+    <script src="../js/imageAnimation/image.js"></script>
     <script src="../js/SmoothScroll.js"></script>
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
-
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"
+      integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco="
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
