--- a/en/whiteCollar.html
+++ b/en/whiteCollar.html
@@ -12,7 +12,6 @@
     <title>SD Rroduction</title>
   </head>
   <body>
-
     <header class="header">
       <div>
         <a href="../en/home.html">
@@ -63,15 +62,16 @@
       </div>
     </header>
 
-    
     <main>
-
-      <section id="organicShop"  class="organicShopAnimation">
+      <section id="organicShop" class="organicShopAnimation">
         <h4>Business website</h4>
         <h3>White <span class="borderText">Collar</span></h3>
       </section>
-      <img class="organicShopImage" src="../img/whiteCollar/Image.png" alt="" />
-
+      <img
+        class="organicShopImage PictureOneAnimation"
+        src="../img/whiteCollar/Image.png"
+        alt=""
+      />
 
       <section id="aboutProject" class="aboutProject">
         <div>
@@ -117,15 +117,21 @@
         </ul>
       </section>
       <img
-        class="organicShopImage"
+        class="organicShopImage PictureTwoAnimation"
         src="../img/whiteCollar/Image1.png"
         alt=""
       />
 
       <section id="mainPage">
-        <h3 class="mainPageAnimation">Main <span class="borderText">Page</span></h3>
+        <h3 class="mainPageAnimation">
+          Main <span class="borderText">Page</span>
+        </h3>
         <div>
-          <img src="../img/whiteCollar/Banner.png" alt="" />
+          <img
+            class="imgAnimation"
+            src="../img/whiteCollar/Banner.png"
+            alt=""
+          />
           <img src="../img/whiteCollar/screnshot.png" alt="" />
         </div>
       </section>
@@ -136,14 +142,36 @@
 
       <section id="internalPages">
         <div>
-          <h3 class="InternalPageAnimation" >Internal <span class="borderText">Pages</span></h3>
-          <img src="../img/whiteCollar/Team1.png" alt="" class="InternalPagePictureOneAnimation"/>
-          <img src="../img/whiteCollar/BlogSingle.png" alt="" class="InternalPagePictureTwoAnimation"/>
+          <h3 class="InternalPageAnimation">
+            Internal <span class="borderText">Pages</span>
+          </h3>
+          <img
+            src="../img/whiteCollar/Team1.png"
+            alt=""
+            class="InternalPagePictureOneAnimation"
+          />
+          <img
+            src="../img/whiteCollar/BlogSingle.png"
+            alt=""
+            class="InternalPagePictureTwoAnimation"
+          />
         </div>
         <div>
-          <img src="../img/whiteCollar/AboutUs.png" alt="" class="InternalPagePictureThreeAnimation"/>
-          <img src="../img/whiteCollar/404.png" alt="" class="InternalPagePictureFourAnimation"/>
-          <img src="../img/whiteCollar/PricePacks.png" alt="" class="InternalPagePictureFiveAnimation"/>
+          <img
+            src="../img/whiteCollar/AboutUs.png"
+            alt=""
+            class="InternalPagePictureThreeAnimation"
+          />
+          <img
+            src="../img/whiteCollar/404.png"
+            alt=""
+            class="InternalPagePictureFourAnimation"
+          />
+          <img
+            src="../img/whiteCollar/PricePacks.png"
+            alt=""
+            class="InternalPagePictureFiveAnimation"
+          />
         </div>
       </section>
 
@@ -207,7 +235,7 @@
               <p>Bohdan</p>
             </div>
           </div>
-        </section>
+        </section> 
       </div>
       <div class="tablet">
         <section id="contentUs">
@@ -352,8 +380,13 @@
     <script src="../js/buttonOnclik.js"></script>
     <script src="../js/language.js"></script>
     <script src="../js/organic/organic.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
+    <script src="../js//organic/organicDE.js"></script>
+    <script src="../js/imageAnimation/image.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"
+      integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco="
+      crossorigin="anonymous"
+    ></script>
     <script src="../js/SmoothScroll.js"></script>
-
   </body>
 </html>
