--- a/en/home.html
+++ b/en/home.html
@@ -16,7 +16,6 @@
       href="../css/cdn.jsdelivr.net_npm_swiper@10_swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="../css/slider.css" />
-
     <title>SD Rroduction</title>
   </head>
   <body>
@@ -444,7 +443,7 @@
             </h2>
             <img class="crlectImg" src="../img/select.svg" alt="" />
             <p>Your goals are our execution</p>
-          </div>Z
+          </div>
           <a class="buttonHeader" href="./email.html">Lets go!</a>
         </div>                            
       </section>
