--- a/de/home.html
+++ b/de/home.html
@@ -474,7 +474,7 @@
           <span class="borderText">Projekte an</span>
         </h2>
         <div class="projectsCards">
-          <div class="projectsFragment1">
+          <div class="projectsFragment1 tablet1">
             <div class="projectsFragmentInfo1">
               <h4>Online Shop</h4>
               <h3>Organic</h3>
@@ -484,7 +484,7 @@
             <div class="projectImage1"></div>
             <div class="onlineShop"></div>
           </div>
-          <div class="projectsFragment2">
+          <div class="projectsFragment2 tablet2">
             <div class="projectImageX">
               <div class="projectImage2-1"></div>
               <div class="projectImage2-2"></div>
@@ -499,7 +499,7 @@
               <a class="buttonProject2" href="./whiteCollar.html">Sicht</a>
             </div>
           </div>
-          <div class="projectsFragment3">
+          <div class="projectsFragment3 tablet3">
             <div class="projectsFragmentInfo3">
               <h4>Landingpage</h4>
               <h3>Brilini Studio</h3>
@@ -514,7 +514,7 @@
               <div class="projectImage3-1"></div>
             </div>
           </div>
-          <div class="projectsFragment4">
+          <div class="projectsFragment4 tablet4">
             <div class="projectImage4X">
               <div class="projectImage4"></div>
               <div class="projectImage4-1"></div>
@@ -533,7 +533,7 @@
       </section>
       <!-- <img class="imageHero" src="../img/deviderLine.svg" alt="" /> -->
 
-      <section id="services">
+      <section id="services" class="serviceAnim">
         <h2>Unser <span class="borderText">Dienstleistungen</span></h2>
         <div class="servicesCards">
           <a href="./email.html">
@@ -1267,6 +1267,7 @@
     <script src="../js/cdn.jsdelivr.net_npm_swiper@10_swiper-bundle.min.js"></script>
     <script src="../js/swiper-slider.js"></script>
     <script src="../js/app.js"></script>
+    <script src="../js/table/table.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
       <script src="../js/SmoothScroll.js"></script>
 
