--- a/de/home.html
+++ b/de/home.html
@@ -70,7 +70,7 @@
     </header>
 
     <main class="desktop">
-      <section class="hero">
+      <section class="hero heroSection">
         <img class="heroBackground" src="../img/Ellipse.svg" alt="" />
         <div class="heroBlock">
           <div class="heroContend">
@@ -155,7 +155,7 @@
       </section>
 
       <section id="services">
-        <h2>Unser <span class="borderText">Dienstleistungen</span></h2>
+        <h2 class="servicesSection">Unser <span class="borderText">Dienstleistungen</span></h2>
         <div class="servicesCards">
           <a href="./email.html">
             <div class="servicesFragment">
@@ -451,7 +451,7 @@
 
 
     <main class="tablet">
-      <section class="hero">
+      <section class="hero heroSectionTablet">
         <img class="heroBackground" src="../img/Ellipse.svg" alt="" />
         <div class="heroBlock">
           <div class="heroContend">
@@ -469,7 +469,7 @@
       <img class="imageHero" src="../img/deviderLine.svg" alt="" />
 
       <section id="projects" class="projects">
-        <h2 class="projectsH2">
+        <h2 class="projectsH2 servicesSectionTablet">
           Schauen Sie sich einige unserer
           <span class="borderText">Projekte an</span>
         </h2>
@@ -1266,6 +1266,8 @@
     <script src="../js/language.js"></script>
     <script src="../js/cdn.jsdelivr.net_npm_swiper@10_swiper-bundle.min.js"></script>
     <script src="../js/swiper-slider.js"></script>
+    <script src="../js/organic/homePageHeroTitle.js"></script>
+    <script src="../js/organic/homePageHeroTablet.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/table/table.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
