--- a/en/home.html
+++ b/en/home.html
@@ -69,7 +69,7 @@
     </header>
 
     <main class="desktop">
-      <section class="hero">
+      <section class="hero heroSection">
         <img class="heroBackground" src="../img/Ellipse.svg" alt="" />
         <div class="heroBlock">
           <div class="heroContend">
@@ -151,7 +151,7 @@
       </section>
 
       <section id="services">
-        <h2>Our <span class="borderText">Services</span></h2>
+        <h2 class="servicesSection">Our <span class="borderText">Services</span></h2>
         <div class="servicesCards">
           <a href="./email.html">
             <div class="servicesFragment">
@@ -429,7 +429,7 @@
     </main>
 
     <main class="tablet">
-      <section class="hero">
+      <section class="hero heroSectionTablet">
         <img class="heroBackground" src="../img/Ellipse.svg" alt="" />
         <div class="heroBlock">
           <div class="heroContend">
@@ -445,7 +445,7 @@
       <img class="imageHero" src="../img/deviderLine.svg" alt="" />
 
       <section id="projects" class="projects">
-        <h2 class="projectsH2">
+        <h2 class="projectsH2 servicesSectionTablet">
           Check our some of <span class="borderText">our projects</span>
         </h2>
         <div class="projectsCards">
@@ -1224,6 +1224,8 @@
     <script src="../js/cdn.jsdelivr.net_npm_swiper@10_swiper-bundle.min.js"></script>
     <script src="../js/swiper-slider.js"></script>
     <script src="../js/app.js"></script>
+    <script src="../js/organic/homePageHeroTitle.js"></script>
+    <script src="../js/organic/homePageHeroTablet.js"></script>
     <script src="../js/table/projectmobile.js"></script>
 
     <script
