--- a/en/home.html
+++ b/en/home.html
@@ -507,11 +507,11 @@
         </div>
       </section>
 
-      <section id="services" class="serviceAnim">
-        <h2>Our <span class="borderText">Services</span></h2>
+      <section id="services">
+        <h2 class="serviceAnim">Our <span class="borderText">Services</span></h2>
         <div class="servicesCards">
           <a href="./email.html">
-            <div class="servicesFragment">
+            <div class="servicesFragment servicesFragmentAnimation1">
               <h3 class="serviceHeader1">Design</h3>
               <ul>
                 <li>Motion Design</li>
@@ -528,7 +528,7 @@
             </div>
           </a>
           <a href="./email.html">
-            <div class="servicesFragment">
+            <div class="servicesFragment servicesFragmentAnimation2">
               <h3 class="serviceHeader2">Development</h3>
               <ul>
                 <li>Landing Page</li>
@@ -545,7 +545,7 @@
             </div>
           </a>
           <a href="./email.html">
-            <div class="servicesFragment">
+            <div class="servicesFragment servicesFragmentAnimation3">
               <h3 class="serviceHeader3">Update</h3>
               <div class="serviseInfo">
                 <ul>
@@ -855,7 +855,7 @@
             </div>
             <a class="buttonProject3" href="./briliniStudio.html">View</a>
           </div>
-          <div class="projectsFragment4 hideProject">
+          <div class="projectsFragment44 hideProject">
             <div class="projectsFragmentInfo4">
               <h4>Mobile App</h4>
               <h3>Abi</h3>
@@ -887,7 +887,7 @@
         <h2>Our <span class="borderText">Services</span></h2>
         <div class="servicesCards">
           <a href="./email.html">
-            <div class="servicesFragment">
+            <div class="servicesFragment servicesFragmentAnimationMobaile1">
               <h3 class="serviceHeader1">Design</h3>
               <ul>
                 <li>Motion Design</li>
@@ -904,7 +904,7 @@
             </div>
           </a>
           <a href="./email.html">
-            <div class="servicesFragment">
+            <div class="servicesFragment servicesFragmentAnimationMobaile2">
               <h3 class="serviceHeader2">Development</h3>
               <ul>
                 <li>Landing Page</li>
@@ -921,7 +921,7 @@
             </div>
           </a>
           <a href="./email.html">
-            <div class="servicesFragment">
+            <div class="servicesFragment servicesFragmentAnimationMobaile3">
               <h3 class="serviceHeader3">Update</h3>
               <ul>
                 <li>SEO optimisation</li>
