--- a/de/home.html
+++ b/de/home.html
@@ -78,7 +78,7 @@
               Bauen Sie die <span class="borderText">Zukunft</span> gemeinsam
               mit uns!
             </h2>
-            <img class="crlectImg" src="../img/select.svg" alt="" style="margin-left: -1.4vw;"/>
+            <img class="crlectImg" src="../img/select.svg" alt="" style="margin-left: -3vw;"/>
             <p>Ihre Ziele sind unsere Umsetzung</p>
           </div>
           <a class="buttonHeader" href="./email.html"
@@ -106,7 +106,7 @@
             <div class="projectImage1"></div>
             <div class="onlineShop"></div>
           </div>
-          <div class="projectsFragment2">
+          <div class="projectsFragment2 projectsFragment22">
             <div class="projectImageX">
               <div class="projectImage2-1"></div>
               <div class="projectImage2-2"></div>
@@ -458,7 +458,7 @@
             <h2>
               Gemeinsam die <span class="borderText">Zukunft</span> bauen!
             </h2>
-            <img class="crlectImg" src="../img/select.svg" alt="" style="margin-left: 19.58vw; margin-top: 9.22vw;"/>
+            <img class="crlectImg" src="../img/select.svg" alt="" style="margin-left: 38.48vw;margin-top: 9.22vw;"/>
             <p>Ihre Ziele sind unsere Umsetzung</p>
           </div>
           <a class="buttonHeader" href="./email.html">
@@ -537,7 +537,7 @@
         <h2>Unser <span class="borderText">Dienstleistungen</span></h2>
         <div class="servicesCards">
           <a href="./email.html">
-            <div class="servicesFragment">
+            <div class="servicesFragment servicesFragmentAnimation1">
               <h3 class="serviceHeader1">design</h3>
               <ul>
                 <li>Bewegungsdesign</li>
@@ -554,7 +554,7 @@
             </div>
           </a>
           <a href="./email.html">
-            <div class="servicesFragment">
+            <div class="servicesFragment servicesFragmentAnimation2">
               <h3 class="serviceHeader2">Entwicklung</h3>
               <ul>
                 <li>Zielseite</li>
@@ -571,7 +571,7 @@
             </div>
           </a>
           <a href="./email.html">
-            <div class="servicesFragment">
+            <div class="servicesFragment servicesFragmentAnimation3">
               <h3 class="serviceHeader3">Aktualisieren</h3>
               <div class="serviseInfo">
                 <ul>
@@ -855,7 +855,7 @@
           <span class="borderText">unsere Projekte</span>
         </h2>
         <div class="projectsCards">
-          <div class="projectsFragment1">
+          <div class="projectsFragment11">
             <div class="projectsFragmentInfo1">
               <h4>Online Shop</h4>
               <h3>Organic</h3>
@@ -866,7 +866,7 @@
             </div>
             <a class="buttonProject1" href="./organicShop.html">Sicht</a>
           </div>
-          <div class="projectsFragment2">
+          <div class="projectsFragment2 animationLeftFragment1">
             <div class="projectsFragmentInfo2">
               <h4>Business -Website</h4>
               <h3>WhiteCollor</h3>
@@ -878,7 +878,7 @@
             </div>
             <a class="buttonProject2" href="./whiteCollar.html">Sicht</a>
           </div>
-          <div class="projectsFragment3 hideProject">
+          <div class="projectsFragment3 hideProject animationLeftFragment2">
             <div class="projectsFragmentInfo3">
               <h4>Zielseite</h4>
               <h3>Brilini Studio</h3>
@@ -889,7 +889,7 @@
             </div>
             <a class="buttonProject3" href="./briliniStudio.html">Sicht</a>
           </div>
-          <div class="projectsFragment4 hideProject">
+          <div class="projectsFragment4 hideProject animationLeftFragment3">
             <div class="projectsFragmentInfo4">
               <h4>Mobile App</h4>
               <h3>Abi</h3>
@@ -916,7 +916,7 @@
         <h2>Unser <span class="borderText">Dienstle <br/> istungen</span></h2>
         <div class="servicesCards">
           <a href="./email.html">
-            <div class="servicesFragment">
+            <div class="servicesFragment servicesFragmentAnimationMobaile1">
               <h3 class="serviceHeader1">design</h3>
               <ul>
                 <li>Bewegungsdesign</li>
@@ -933,7 +933,7 @@
             </div>
           </a>
           <a href="./email.html">
-            <div class="servicesFragment">
+            <div class="servicesFragment servicesFragmentAnimationMobaile2">
               <h3 class="serviceHeader2">Entwicklung</h3>
               <ul>
                 <li>Zielseite</li>
@@ -950,7 +950,7 @@
             </div>
           </a>
           <a href="./email.html">
-            <div class="servicesFragment">
+            <div class="servicesFragment servicesFragmentAnimationMobaile3">
               <h3 class="serviceHeader3">Aktualisieren</h3>
               <ul>
                 <li>SEO -Optimierung</li>
@@ -1270,8 +1270,8 @@
     <script src="../js/organic/homePageHeroTablet.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/table/table.js"></script>
+    <script src="../js/mobileDE/mobileDe.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha256-huW7yWl7tNfP7lGk46XE+Sp0nCotjzYodhVKlwaNeco=" crossorigin="anonymous"></script>
       <script src="../js/SmoothScroll.js"></script>
-
   </body>
 </html>
