--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>SD Rroduction</title>
   </head>
   <body>
-    <h2><a href="./en/home.html">en</a></h2>
-    <h2><a href="./de/home.html">DE</a></h2>
+    <h2><a href="./en/home.html" class="english">English</a></h2>
+    <h2><a href="./de/home.html" class="deutsch">Deutsch</a></h2>
   </body>
 </html>
