--- a/de/home.html
+++ b/de/home.html
@@ -17,7 +17,7 @@
     />
     <link rel="stylesheet" href="../css/slider.css" />
 
-    <title>SD Rroduction</title>
+    <title>SD Production</title>
   </head>
   <body>
     <header class="header">
