--- a/en/home.html
+++ b/en/home.html
@@ -16,7 +16,7 @@
       href="../css/cdn.jsdelivr.net_npm_swiper@10_swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="../css/slider.css" />
-    <title>SD Rroduction</title>
+    <title>SD Production</title>
   </head>
   <body>
     <header class="header">
