--- a/en/organicShop.html
+++ b/en/organicShop.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/mainPage/footer.css" />
     <link rel="stylesheet" href="../css/organicShop/organicShop.css" />
 
-    <title>SD Rroduction</title>
+    <title>SD Production</title>
   </head>
   <body>
     <header class="header">
