--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     />
     <link rel="stylesheet" href="./css/slider.css" />
 
-    <title>SD Rroduction</title>
+    <title>SD Production</title>
   </head>
   <body>
-    <h2><a href="./en/home.html" class="english">English</a></h2>
-    <h2><a href="./de/home.html" class="deutsch">Deutsch</a></h2>
+    <script>
+      window.location.href = "./en/home.html";
+    </script>
   </body>
 </html>
