--- a/de/organicShop.html
+++ b/de/organicShop.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/organicShop/organicShop.css" />
     <link rel="stylesheet" href="../css/language/du.css" />
 
-    <title>SD Rroduction</title>
+    <title>SD Production</title>
   </head>
   <body>
     <header class="header">
